--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -1126,7 +1126,7 @@
     "}\n",
     "\n",
     "# Found these playlists from https://everynoise.com/, \n",
-    "# made by Head Data Scientist at Spotify\n",
+    "\n",
     "# these playlists aim to represent the \"sound of America\". They won't necessarily \n",
     "# correspond to the top streamed songs, but using top streamed songs has its own\n",
     "# issues, like being played on repeat in a store or restaurant. I believe these \n",
@@ -1564,7 +1564,7 @@
    ],
    "source": [
     "# data.to_csv('~/Documents/01 Education/MS Data Science/STAT 5000/sounds_of_america_spotify_2019_2023.csv', index=False)\n",
-    "data = pd.read_csv('~/Documents/01 Education/MS Data Science/STAT 5000/sounds_of_america_spotify_2019_2023.csv')\n",
+    "data = pd.read_csv('sounds_of_america_spotify_2019_2023.csv')\n",
     "data"
    ]
   },
@@ -1604,7 +1604,7 @@
     "    'loudness',\n",
     "    'liveness',\n",
     "    'valence'\n",
-    "    ]]\n",
+    "]]\n",
     "\n",
     "# save labels to use later\n",
     "song_names = data['track_name']\n",
@@ -8136,8 +8136,9 @@
     "    'acousticness', \n",
     "    'instrumentalness', \n",
     "    'liveness', \n",
-    "    'valence', 'tempo'\n",
-    "    ]\n",
+    "    'valence', \n",
+    "    'tempo'\n",
+    "]\n",
     "\n",
     "# Perform t-tests for 2019 vs 2020 and 2022 vs 2023\n",
     "data_2019 = data[audio_features][data['year'] == '2019']\n",
